Fix image path for deployment

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 
 <body>
     <header>
-        <img src="C:\Users\User\OneDrive\Desktop\graduated.png" alt="Profile Picture"
-            style="border-radius: 50%; margin-bottom: 1rem;" width="10%">
+        <img src="graduated.png" alt="Profile Picture" style="border-radius: 50%; margin-bottom: 1rem;" width="10%">
         <h1>Ezebuiro AbbaJustice</h1>
     </header>
 
