Add Vercel deployment link

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             <h2>Connect</h2>
             <ul>
                 <li><a href="https://github.com/Haze-Ez" target="_blank">GitHub</a></li>
+                <li><a href="https://web-app-eze.vercel.app/" target="_blank">Live Site</a></li>
             </ul>
         </section>
 
